<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <LinearLayout
        android:background="@color/colorPrimary"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/customTextActionBar"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.AppCompatTextView>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:padding="15dp"
            android:hint="@string/nome_do_usu_rio"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        <EditText
            android:inputType="textPassword"
            android:padding="15dp"
            android:hint="@string/senha"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        <Button
            android:id="@+id/btn_logar"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:text="@string/entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/customTextActionBar"
            android:text="@string/ainda_n_o_cadastrado_registre_se"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.AppCompatTextView>
        <Button
            android:id="@+id/btn_registrar"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:text="@string/registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Button>

    </LinearLayout>
</LinearLayout>