<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.NovoInventarioActivity">
    <LinearLayout
        android:background="@color/colorPrimary"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/customTextActionBar"
            android:text="@string/novo_invent_rio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.AppCompatTextView>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/nome_inventario"
            android:padding="15dp"
            android:hint="@string/nome_do_invent_rio"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        <EditText
            android:id="@+id/descr_inventario"
            android:layout_gravity="top"
            android:lines="10"
            android:padding="15dp"
            android:hint="@string/descricao_do_invent_rio"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        <Button
            android:id="@+id/btn_cadastrar_inventario"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:text="@string/cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>
        <Button
            android:visibility="gone"
            android:id="@+id/btn_editar_inventario"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:text="@string/editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_mini_home"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:drawableTint="@color/colorAccent"
            android:drawableTop="@drawable/add_circle"
            android:text="@string/home"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>
        <Button
            android:id="@+id/btn_mini_inventario"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:drawableTint="@color/colorAccent"
            android:drawableTop="@drawable/list"
            android:text="@string/invent_rios"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>
        <Button
            android:id="@+id/btn_mini_relatorio"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:drawableTint="@color/colorAccent"
            android:drawableTop="@drawable/leaderboard"
            android:text="@string/relat_rios"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>
</LinearLayout>