<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.NovoItemActivity">
    <LinearLayout
        android:background="@color/colorPrimary"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/customTextActionBar"
            android:text="@string/novo_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.AppCompatTextView>
    </LinearLayout>
    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/campo_nome_produto"
                android:padding="15dp"
                android:hint="@string/nome_do_produto"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
            <EditText
                android:id="@+id/campo_quantidade"
                android:padding="15dp"
                android:hint="@string/quantidade_do_produto"
                android:layout_margin="10dp"
                android:inputType="numberDecimal"
                android:background="@drawable/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <EditText
                android:id="@+id/campo_categoria"
                android:padding="15dp"
                android:hint="@string/categoria_produto"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
            <EditText
                android:id="@+id/campo_descr"
                android:layout_gravity="top"
                android:lines="5"
                android:padding="15dp"
                android:hint="@string/descricao_do_produto"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
            <Button
                android:visibility="gone"
                android:id="@+id/btn_abrir_opcao_foto"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:drawableTint="@color/colorAccent"
                android:drawableTop="@drawable/galery"
                android:text="@string/foto_do_produto"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Button>
            <LinearLayout
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/view_image"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/view_upload_foto"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:visibility="gone"
                    android:id="@+id/btn_camera"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/abrir_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></Button>
                <Button
                    android:id="@+id/btn_galeria"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/abrir_galeria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></Button>

            </LinearLayout>
            <Button
                android:id="@+id/btn_cadastrar"
                android:layout_margin="10dp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:text="@string/cadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:visibility="gone"
                android:id="@+id/btn_edit"
                android:layout_margin="10dp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:text="@string/editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:drawableTint="@color/colorAccent"
            android:drawableTop="@drawable/add_circle"
            android:text="@string/home"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>
        <Button
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:drawableTint="@color/colorAccent"
            android:drawableTop="@drawable/list"
            android:text="@string/invent_rios"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>
        <Button
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:drawableTint="@color/colorAccent"
            android:drawableTop="@drawable/leaderboard"
            android:text="@string/relat_rios"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>
</LinearLayout>