<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.MainActivity"
    android:orientation="vertical">
        <include layout="@layout/action_bar"></include>
   <LinearLayout
       android:layout_weight="1"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <Button
           android:background="@color/colorPrimary"
           android:drawableTint="@color/colorAccent"
           android:drawableLeft="@drawable/add_circle"
           android:textSize="20sp"
           android:padding="40dp"
           android:layout_marginTop="15dp"
           android:layout_marginRight="20dp"
           android:layout_marginLeft="20dp"
           android:id="@+id/btn_novo_inventario"
           android:text="@string/novo_invent_rio"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
       </Button>
       <Button
           android:background="@color/colorPrimary"
           android:drawableTint="@color/colorAccent"
           android:drawableLeft="@drawable/leaderboard"
           android:textSize="20sp"
           android:padding="40dp"
           android:layout_marginTop="15dp"
           android:layout_marginRight="20dp"
           android:layout_marginLeft="20dp"
           android:id="@+id/btn_iventarios"
           android:text="@string/invent_rios"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
       </Button>
       <Button
           android:background="@color/colorPrimary"
           android:drawableTint="@color/colorAccent"
           android:drawableLeft="@drawable/list"
           android:textSize="20sp"
           android:padding="40dp"
           android:layout_marginTop="15dp"
           android:layout_marginRight="20dp"
           android:layout_marginLeft="20dp"
           android:id="@+id/btn_relatorios"
           android:text="@string/relat_rios"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
       </Button>
   </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btndown_home"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:drawableTint="@color/colorAccent"
            android:drawableTop="@drawable/add_circle"
            android:text="@string/home"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>
        <Button
            android:id="@+id/btndow_inventarios"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:drawableTint="@color/colorAccent"
            android:drawableTop="@drawable/list"
            android:text="@string/invent_rios"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>
        <Button
            android:id="@+id/btndow_relatorios"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:drawableTint="@color/colorAccent"
            android:drawableTop="@drawable/leaderboard"
            android:text="@string/relat_rios"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>

</LinearLayout>