<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InventarioActivity">
    <LinearLayout
        android:background="@color/colorPrimary"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/customTextActionBar"
            android:text="@string/invent_rios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.AppCompatTextView>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lista_inventario"
            android:orientation="vertical"
            tools:listitem="@layout/item_lista"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:drawableTint="@color/colorAccent"
            android:drawableTop="@drawable/add_circle"
            android:text="@string/home"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>
        <Button
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:drawableTint="@color/colorAccent"
            android:drawableTop="@drawable/list"
            android:text="@string/invent_rios"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>
        <Button
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:drawableTint="@color/colorAccent"
            android:drawableTop="@drawable/leaderboard"
            android:text="@string/relat_rios"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>
</LinearLayout>