<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.ItensActivity">
    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="left"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/customTextActionBar"
                android:text="@string/itens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </androidx.appcompat.widget.AppCompatTextView>
        </LinearLayout>
        <LinearLayout
            android:gravity="right"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_back"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/colorPrimary"
                android:tint="@color/colorAccent"
                android:src="@drawable/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </androidx.appcompat.widget.AppCompatImageButton>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/texto_sem_registros"
            android:visibility="gone"
            android:gravity="center"
            style="@style/customTextActionBar"
            android:text="@string/itens_vazio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></androidx.appcompat.widget.AppCompatTextView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lista_itens"
            android:orientation="vertical"
            tools:listitem="@layout/item_lista"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
    <Button
        android:id="@+id/btn_cadastrar_item"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:text="@string/cadastrar_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Button>
</LinearLayout>